Fix text-align

--- a/src/styles/components/_addOns.scss
+++ b/src/styles/components/_addOns.scss
@@ -31,6 +31,11 @@
           }
         }
       }
+      .text__container {
+        .text2 {
+          text-align: start;
+        }
+      }
       .text3__container {
         display: flex;
         margin-left: auto;
